fix wrong height when menu is open

--- a/assets/src/scss/layout/header.scss
+++ b/assets/src/scss/layout/header.scss
@@ -10,7 +10,7 @@
 }
 
 .mobile-menu-open.unit {
-  padding-top: 7.125em;
+  padding-top: 9.875em;
 }
 
 .mobile-menu-open {
